# dcat

./: AbstractDBWriter.h  CMakeLists.txt  DBReader.cpp  DBReader.h  DBWriter.cpp  DBWriter.h  DirEntry.cpp  DirEntry.h  DirectoryReader.cpp  DirectoryReader.h  README.md  UTF.hpp  VLQ.cpp  VLQ.h  endian_serial.cpp  endian_serial.h  gtest_filestamp.cpp  gtest_serial_big.cpp  gtest_serial_vlq.cpp  gtest_serialization.cpp  main.cpp  structs.h  todo.md
